--- a/UI/Style_Sheets/light.css
+++ b/UI/Style_Sheets/light.css
@@ -65,12 +65,12 @@ QListWidget{
 	background-color: @color5;
     color: @color4;
     font-family: "Ubuntu";
-    border: 1px solid @color1;
+    border: 1px solid lightgray;
 }
 QListWidget:disabled{
 	background-color: @color5;
     color: #C0C0C0;
-    border: 1px solid @color1;
+    border: 1px solid lightgray;
 }
 QMenu{
     color:@color4;
@@ -462,6 +462,10 @@ QComboBox[objectName|="comboBox2_"]:disabled{
     padding-left: 4px;
     font: 10pt "Ubuntu";
 }
+QComboBox[objectName|="comboBox3_"]{
+    text-align: right;
+}
+
 
 QTableWidget#tableWidget_status_headers{
 	background-color: rgb(244, 244, 244);
@@ -470,5 +474,8 @@ QTableWidget#tableWidget_status_results{
 	background-color: rgb(244, 244, 244);
 }
 
+QFrame[objectName|="line1_"]{background: @color3;min-width:1px;max-width: 1px; border:none;}
+QFrame[objectName|="line2_"]{background: @color1;}
+QFrame[objectName|="line3_"]{background: @color3;max-height: 1px; border:none;}
 QFrame#line_iq{border: 1px solid #17365D;}
 
