--- a/UI/Style_Sheets/custom.css
+++ b/UI/Style_Sheets/custom.css
@@ -13,6 +13,7 @@ QCheckBox[objectName|="checkBox_"]{
     background-color: rgba(0,0,0,0);
     color: @color4;
     font-family: "Ubuntu";
+    font-size: 10pt;
 }
 QCheckBox[objectName|="checkBox_"]:disabled{
     color: @color1;
@@ -68,6 +69,17 @@ QHeaderView{
 }
 QLabel{
     font-family: "Ubuntu";
+}
+QListView{
+    background-color: @color5;
+    color: @color4;
+    font-family: "Ubuntu";
+    border: 1px solid @color1;
+}
+QListView:disabled{
+    background-color: @color5;
+    color: @color1;
+    border: 1px solid @color1;
 }
 QListWidget{
     background-color: @color5;
@@ -219,15 +231,15 @@ QTableWidget:disabled{
     color: @color1;
 }
 QTableWidget::item:selected{  /*different*/
-	background-color: #F6724F;
-	color: #FFFFFF;
+    background-color: #F6724F;
+    color: #FFFFFF;
 }
 QTableWidget > QHeaderView::section{  /*different*/
-	background-color: @color2;
+    background-color: @color2;
     color: @color4;
 }
 QTableWidget > QTableCornerButton::section{  /*different*/
-	background-color: @color2;
+    background-color: @color2;
     color: @color4;
 }
 
@@ -280,6 +292,39 @@ QTextEdit:disabled{
     font-family: "Ubuntu";
     border: 1px solid @color1;
 }
+QTreeView{
+    background-color: @color5;
+    color: @color4;
+    font-size: 10pt;
+    font-family: "Ubuntu";
+    border: 1px solid @color1;
+}
+QTreeView > QHeaderView::section{
+    background-color: @color2;
+    color: @color4;
+    font-size: 10pt;
+    border: 1px solid @color1;
+    padding: 2px;
+    padding-left: 4px;    
+}
+QTreeView::item:selected{  /*different*/
+    background-color: #F6724F;
+    color: #FFFFFF;
+}
+QTreeView::branch:selected{  /*different*/
+    background-color: #F6724F;
+    color: #FFFFFF;
+}
+QTreeView::branch:open:has-children:!has-siblings,
+QTreeView::branch:open:has-children:has-siblings  {
+    border-image: none;
+    image: url(@icon_path/light-tree-open.png);
+}
+QTreeView::branch:has-children:!has-siblings:closed,
+QTreeView::branch:closed:has-children:has-siblings {
+    border-image: none;
+    image: url(@icon_path/light-tree-closed.png);
+}
 QTreeWidget{
     background-color: @color5;
     color: @color4;
@@ -292,12 +337,12 @@ QTreeWidget > QHeaderView{
     color: @color4;
 }
 QTreeWidget::item:selected{
-	background-color: #F6724F;
-	color: #FFFFFF;
+    background-color: #F6724F;
+    color: #FFFFFF;
 }
 QTreeWidget::branch:selected{
-	background-color: #F6724F;
-	color: #FFFFFF;
+    background-color: #F6724F;
+    color: #FFFFFF;
 }
 
 
@@ -307,39 +352,39 @@ QTreeWidget::branch:selected{
 
 /*Specific*/
 QPushButton[objectName|="pushButton1_"]{
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3, stop:0.85 @color3, stop:1 @color3);
-	color: @color4;
-	border: 1px solid @color3;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	width:107px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3, stop:0.85 @color3, stop:1 @color3);
+    color: @color4;
+    border: 1px solid @color3;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    width:107px;
     margin-top: 6px;
-	height: 21px;
+    height: 21px;
 }
 QPushButton[objectName|="pushButton2_"]{
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3, stop:0.85 @color3, stop:1 @color3);
-	color:rgb(0, 220, 0);
-	border: 1px solid @color3;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	height:27px;
-	margin-top: 3px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3, stop:0.85 @color3, stop:1 @color3);
+    color:rgb(0, 220, 0);
+    border: 1px solid @color3;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    height:27px;
+    margin-top: 3px;
 }
 QPushButton[objectName|="pushButton_top"]{
-	color: @color4;
-	background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
-	border-style: outset;
-	border-width: 2px;
-	border-radius: 10px;
-	/*border-color: #152947;*/
-	border-color:  @color3;
+    color: @color4;
+    background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
+    border-style: outset;
+    border-width: 2px;
+    border-radius: 10px;
+    /*border-color: #152947;*/
+    border-color:  @color3;
 }
 QPushButton[objectName|="pushButton_top"]:hover{
-	background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(170, 170, 170,50));
+    background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(170, 170, 170,50));
 }
 QPushButton[objectName|="pushButton_top"]:pressed{
-	background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
-	padding: 47px -2px 0px 92px;
+    background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
+    padding: 47px -2px 0px 92px;
 }
 QPushButton#pushButton_top_tsi{padding: 45px 0px 0px 92px;}
 QPushButton#pushButton_top_pd{padding: 45px 0px 0px 94px;}
@@ -348,43 +393,43 @@ QPushButton#pushButton_top_iq{padding: 45px 0px 0px 94px;}
 QPushButton#pushButton_top_archive{padding: 45px 0px 0px 60px;}
 
 QFrame[objectName|="frame1_"]{
-	background-color: @color2;
-	border: 1px solid @color3;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    background-color: @color2;
+    border: 1px solid @color3;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QFrame[objectName|="frame2_"]{
-	background-color: @color2;
-	border: 1px solid @color3;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    background-color: @color2;
+    border: 1px solid @color3;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QFrame[objectName|="frame3_"]{border: 1px solid @color3;}
 QFrame[objectName|="frame4_"]{
-	background-color: @color1;    
-	border: 1px solid @color3;
+    background-color: @color1;    
+    border: 1px solid @color3;
 }
 QFrame[objectName|="frame5_"]{
-	background-color: @color2;    
-	border: 1px solid @color1;
+    background-color: @color2;    
+    border: 1px solid @color1;
 }
 QFrame[objectName|="frame6_"]{
-	background-color: @color2;    
-	border: 1px solid @color3;
+    background-color: @color2;    
+    border: 1px solid @color3;
 }
 
 QTextEdit[objectName|="textEdit1_"]{
-	border: 1px solid @color3;
-	background-color: @color5;
-	color: @color4;
+    border: 1px solid @color3;
+    background-color: @color5;
+    color: @color4;
 }
 QTextEdit[objectName|="textEdit2_"]{
-	border: 1px solid @color3;
-	background-color: @color2;
+    border: 1px solid @color3;
+    background-color: @color2;
     color: @color4;
-	font: 10pt "Ubuntu";
+    font: 10pt "Ubuntu";
 }
 
 
@@ -395,15 +440,15 @@ QTableWidget[objectName|="tableWidget1_"]{border: 1px solid @color3;}
 #treeWidget_attack_attacks > QHeaderView {font-size: 10pt;}
 
 QLabel[objectName|="label1_"]{
-	qproperty-alignment: AlignCenter;
-	border: 1px solid @color3;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3,   stop:0.85 @color3, stop:1 @color3);
-	padding: 0px 0px;
-	color: @color4;
-	max-height: 20px;
-	font: bold 10pt "Ubuntu";
+    qproperty-alignment: AlignCenter;
+    border: 1px solid @color3;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3,   stop:0.85 @color3, stop:1 @color3);
+    padding: 0px 0px;
+    color: @color4;
+    max-height: 20px;
+    font: bold 10pt "Ubuntu";
 }
 QLabel[objectName|="label2_"]{color: @color4;}
 QLabel[objectName|="label2_"]:disabled{color: @color1;}
@@ -451,17 +496,17 @@ QPushButton#pushButton_status5{
 }
 
 QStackedWidget[objectName|="stackedWidget1_"]{
-	/*background-color: rgb(251, 251, 251);*/
-	background-color: @color2;
-	border: 1px solid @color3;
-	border-radius: 15px;
+    /*background-color: rgb(251, 251, 251);*/
+    background-color: @color2;
+    border: 1px solid @color3;
+    border-radius: 15px;
 }
 QStackedWidget[objectName|="stackedWidget2_"]{
-	/*background-color: rgb(251, 251, 251);*/
-	background-color: @color2;
-	border: 1px solid @color3;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    /*background-color: rgb(251, 251, 251);*/
+    background-color: @color2;
+    border: 1px solid @color3;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QStackedWidget[objectName|="stackedWidget3_"]{border: 1px solid @color3;}
 
@@ -471,12 +516,12 @@ QStackedWidget[objectName|="stackedWidget3_"]{border: 1px solid @color3;}
 
 
 QWidget#centralwidget{
-	background-color: @color1;
+    background-color: @color1;
 }
 
 
 QWidget#scrollAreaWidgetContents_2 {
-	background-color: @color1;
+    background-color: @color1;
 }
 
 QMenuBar#menubar {
@@ -498,15 +543,15 @@ QFrame#line_iq{border: 1px solid @color3;}
 
 QTabWidget#tabWidget2_2::pane{
     background-color: @color2;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;    
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;    
 }
 
 QComboBox[objectName|="comboBox_"] {
     padding-left: 4px;
     color: #000000;
-	border: 1px solid @color2;
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
+    border: 1px solid @color2;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
     padding: 1px 18px 1px 5px;
 }
 QComboBox[objectName|="comboBox_"]::item {
@@ -514,22 +559,22 @@ QComboBox[objectName|="comboBox_"]::item {
 }
 QComboBox[objectName|="comboBox_"]:disabled{
     padding-left: 4px;
-	color: #999999;
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
+    color: #999999;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
 }
 QComboBox[objectName|="comboBox_"]:hover{
     padding-left: 4px;
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
 }
 QComboBox[objectName|="comboBox_"]::item:selected{
-	background-color: #F6724F;
-	color: #FFFFFF;
+    background-color: #F6724F;
+    color: #FFFFFF;
 }
 QComboBox[objectName|="comboBox2_"]{
     padding-left: 4px;
-	color: #000000;
-	border: 1px solid #111111;
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
+    color: #000000;
+    border: 1px solid #111111;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
     font: 10pt "Ubuntu";
 }
 QComboBox[objectName|="comboBox2_"]::item {
@@ -537,17 +582,17 @@ QComboBox[objectName|="comboBox2_"]::item {
 }
 QComboBox[objectName|="comboBox2_"]:disabled{
     padding-left: 4px;
-	color: #999999;
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
+    color: #999999;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
     font: 10pt "Ubuntu";
 }
 QComboBox[objectName|="comboBox2_"]:hover{
     padding-left: 4px;
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
 }
 QComboBox[objectName|="comboBox2_"]::item:selected{
-	background-color: #F6724F;
-	color: #FFFFFF;
+    background-color: #F6724F;
+    color: #FFFFFF;
     border: 1px solid transparent;  /* needs border to move indicator */
 }
 QComboBox[objectName|="comboBox2_"]::indicator{
@@ -558,8 +603,8 @@ QComboBox[objectName|="comboBox2_"]::indicator{
 }
 QComboBox[objectName|="comboBox3_"] {
     color: #000000;
-	border: 1px solid @color2;
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
+    border: 1px solid @color2;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
     padding: 1px 1px 1px 5px;  /* padding needed for color to work */
     text-align: right;
 }
@@ -567,15 +612,15 @@ QComboBox[objectName|="comboBox3_"]::item {
     color: @color4;
 }
 QComboBox[objectName|="comboBox3_"]:disabled{
-	color: #999999;
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
+    color: #999999;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
 }
 QComboBox[objectName|="comboBox3_"]:hover{
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
 }
 QComboBox[objectName|="comboBox3_"]::item:selected{
-	background-color: #F6724F;
-	color: #FFFFFF;
+    background-color: #F6724F;
+    color: #FFFFFF;
     border: 1px solid transparent;  /* needs border to move indicator */
 }
 QComboBox[objectName|="comboBox3_"]::indicator{
@@ -587,16 +632,16 @@ QComboBox[objectName|="comboBox3_"]::indicator{
 
 
 QWidget#HardwareSelect{
-	background-color: @color1;
+    background-color: @color1;
 }
 
 
 QTableWidget#tableWidget_status_headers{
-	background-color: @color2;
+    background-color: @color2;
     color: @color4;
 }
 QTableWidget#tableWidget_status_results{
-	background-color: @color2;
+    background-color: @color2;
     color: @color4;
 }
 
@@ -607,7 +652,14 @@ QDialog#Dialog_new_soi{background-color: @color1;}
 QDialog#SigMF_Window{background-color: @color1;}
 QDialog#Dialog_custom_color{background-color: @color1;}
 
-
+QTreeView#treeWidget_attack_attacks > QHeaderView::section{
+    color: @color4;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 @color3, stop:0.05 #888888, stop:0.15 @color3,   stop:0.85 @color3, stop:1 @color3);
+    font: bold 10pt "Ubuntu";
+    border: none;
+    padding: 3px;
+    padding-left: 4px;
+}
 
 
 
