--- a/UI/Style_Sheets/light.css
+++ b/UI/Style_Sheets/light.css
@@ -2,6 +2,7 @@
 
 QCheckBox{
     font-family: "Ubuntu";
+    font-size: 10pt;
 }
 QCheckBox[objectName|="checkBox_"]{
     background-color: rgba(0,0,0,0);
@@ -37,13 +38,13 @@ QComboBox::down-arrow:disabled {
     background-color: transparent;
 }
 QDoubleSpinBox{
-	background-color: @color5;
+    background-color: @color5;
     color: @color4;
     font-family: "Ubuntu";
     border: 1px solid lightgray;
 }
 QDoubleSpinBox:disabled{
-	background-color: @color5;
+    background-color: @color5;
     color: #C0C0C0;
     border: 1px solid lightgray;
 }
@@ -61,14 +62,25 @@ QHeaderView{
 QLabel{
     font-family: "Ubuntu";
 }
+QListView{
+    background-color: @color5;
+    color: @color4;
+    font-family: "Ubuntu";
+    border: 1px solid lightgray;
+}
+QListView:disabled{
+    background-color: @color5;
+    color: #C0C0C0;
+    border: 1px solid lightgray;
+}
 QListWidget{
-	background-color: @color5;
+    background-color: @color5;
     color: @color4;
     font-family: "Ubuntu";
     border: 1px solid lightgray;
 }
 QListWidget:disabled{
-	background-color: @color5;
+    background-color: @color5;
     color: #C0C0C0;
     border: 1px solid lightgray;
 }
@@ -91,19 +103,19 @@ QMenu:selected{
 QPlainTextEdit{
     border: 1px solid lightgray;
     border-radius: 0px;
-	background-color: @color5;
+    background-color: @color5;
     color: @color4;
     font-family: "Ubuntu";
 }
 QPlainTextEdit:disabled{
     border: 1px solid lightgray;
     border-radius: 0px;
-	background-color: #EFEFEF;
+    background-color: #EFEFEF;
     color: #C0C0C0;
     font-family: "Ubuntu";
 }
 QProgressBar{
-	background-color: @color5;
+    background-color: @color5;
     color: @color4;
     font-family: "Ubuntu";
 }
@@ -114,7 +126,7 @@ QProgressBar{
     border: .px solid black;
 }*/
 QProgressBar:disabled{
-	background-color: @color5;
+    background-color: @color5;
     color: #C0C0C0;
 }
 QPushButton{
@@ -124,39 +136,39 @@ QPushButton[objectName|="pushButton_"]{
     border: 1px solid #ABABAB;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
-	color: black;
+    color: black;
     font-family: "Ubuntu";
 }
 QPushButton[objectName|="pushButton_"]:disabled{
     border: 1px solid #C4C4C4;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
-	color: #C0C0C0;
+    color: #C0C0C0;
 }
 QPushButton[objectName|="pushButton_"]:hover{
     border: 1px solid #ABABAB;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #F8F8F8);
-	color: black;
+    color: black;
 }
 /*
 QPushButton[objectName|="pushButton_"]:pressed{
-	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #666666, stop: 1 #666666);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #666666, stop: 1 #666666);
 }*/
 QPushButton:default {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #F8F9FA, stop: 1 #DFE6EB);
-	border: 1px solid #26709E;
+    border: 1px solid #26709E;
 }
 QPushButton:focus:pressed {
     background-color: #C9D1D7;
-	border: 1px solid #26709E;
+    border: 1px solid #26709E;
 }
 QRadioButton{
     font-family: "Ubuntu";
     color: @color4;
 }
 QRadioButton:disabled{
-	color: #C0C0C0;
+    color: #C0C0C0;
 }
 QRadioButton::indicator:unchecked {
     image: url(@icon_path/light-radio.png);
@@ -167,13 +179,13 @@ QRadioButton::indicator:checked {
     padding-left: -1;
 }
 QSpinBox{
-	background-color: @color5;
+    background-color: @color5;
     color: @color4;
     font-family: "Ubuntu";
     border: 1px solid lightgray;
 }
 QSpinBox:disabled{
-	background-color: @color5;
+    background-color: @color5;
     color: #C0C0C0;
     border: 1px solid lightgray;
 }
@@ -191,77 +203,102 @@ QStatusBar{
     color: @color4;
 }
 QTableWidget{
-	background-color: @color5;
+    background-color: @color5;
     color: @color4;
     border: 1px solid #B8B8B8;
     font-family: "Ubuntu";
 }
 QTableWidget > QHeaderView{
-	background-color: @color2;
+    background-color: @color2;
     color: @color4;
 }
 QTableWidget > QHeaderView:disabled{
-	background-color: @color2;
+    background-color: @color2;
     color: #C0C0C0;
 }
 QTableWidget > QTableCornerButton{
-	background-color: @color2;
+    background-color: @color2;
     color: @color4;
 }
 QTableWidget:disabled{
-	background-color: #EFEFEF;
+    background-color: #EFEFEF;
     color: #C0C0C0;
 }
 #tabWidget > QTabBar::tab {
-	width: 132px; 
-	height:27px;
-	margin-top: 0px;
+    width: 132px; 
+    height:27px;
+    margin-top: 0px;
 }
 #tabWidget > QTabBar::tab:!selected {
     margin-top: 6px;
-	height: 21px;
-	width: 132px; 
+    height: 21px;
+    width: 132px; 
 }
 QTabBar::tab:disabled {
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #eeeeee, stop:0.12 #888888, stop:0.3 #666666,   stop:0.85 #444444, stop:1 #444444);
-	border: 1px solid #444444;
-	color: rgb(150, 150, 150);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #eeeeee, stop:0.12 #888888, stop:0.3 #666666,   stop:0.85 #444444, stop:1 #444444);
+    border: 1px solid #444444;
+    color: rgb(150, 150, 150);
 }
 QTabWidget::pane { 
-	border: 1px solid #17365D;
+    border: 1px solid #17365D;
 }
 QTabBar::tab {
-	qproperty-alignment: AlignCenter;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
-	border: 1px solid #17365D;
-	color:rgb(0, 220, 0);
+    qproperty-alignment: AlignCenter;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
+    border: 1px solid #17365D;
+    color:rgb(0, 220, 0);
     font: bold 10pt "Ubuntu";
-	margin-right:1px;
-	width: 132px;
-	height:22px;
-	margin-top: 3px;
+    margin-right:1px;
+    width: 132px;
+    height:22px;
+    margin-top: 3px;
 }
 QTabBar::tab:!selected {
     margin-top: 7px;
-	height: 18px;
-	color: rgb(255, 255, 255);
+    height: 18px;
+    color: rgb(255, 255, 255);
 }
 
 QTextEdit{
     border: 1px solid lightgray;
     border-radius: 0px;
-	background-color: @color5;
+    background-color: @color5;
     color: @color4;
     font-family: "Ubuntu";
 }
 QTextEdit:disabled{
     border: 1px solid lightgray;
     border-radius: 0px;
-	background-color: #EFEFEF;
+    background-color: #EFEFEF;
     color: #C0C0C0;
     font-family: "Ubuntu";
+}
+QTreeView{
+    background-color: @color5;
+    color: @color4;
+    font-size: 10pt;
+    font-family: "Ubuntu";
+    border: 1px solid lightgray;
+}
+QTreeView > QHeaderView::section{
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
+    color: @color4;
+    font-size: 10pt;
+    border: 1px solid darkgray;
+    padding: 2px;
+    padding-left: 4px;    
+}
+QTreeView::branch:open:has-children:!has-siblings,
+QTreeView::branch:open:has-children:has-siblings  {
+    border-image: none;
+    image: url(@icon_path/light-tree-open.png);
+}
+QTreeView::branch:has-children:!has-siblings:closed,
+QTreeView::branch:closed:has-children:has-siblings {
+    border-image: none;
+    image: url(@icon_path/light-tree-closed.png);
 }
 QTreeWidget{
     background-color: @color5;
@@ -286,36 +323,34 @@ QTreeWidget::branch:closed:has-children:has-siblings {
 }
 
 
-
-
 /*Specific*/
 QPushButton[objectName|="pushButton1_"]{
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
-	color: rgb(255, 255, 255);
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	width:107px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
+    color: rgb(255, 255, 255);
+    border: 1px solid #17365D;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    width:107px;
     margin-top: 6px;
-	height: 21px;
+    height: 21px;
 }
 QPushButton[objectName|="pushButton2_"]{
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
-	color:rgb(0, 220, 0);
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	height:27px;
-	margin-top: 3px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
+    color:rgb(0, 220, 0);
+    border: 1px solid #17365D;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    height:27px;
+    margin-top: 3px;
 }
 QPushButton[objectName|="pushButton_top"]{
-	color: rgb(0, 0, 0);
-	background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
-	border-style: outset;
-	border-width: 2px;
-	border-radius: 10px;
-	/*border-color: #152947;*/
-	border-color:  #17365D;
+    color: rgb(0, 0, 0);
+    background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
+    border-style: outset;
+    border-width: 2px;
+    border-radius: 10px;
+    /*border-color: #152947;*/
+    border-color:  #17365D;
 }
 QPushButton[objectName|="pushButton_top"]:hover{
     color: @color4;
@@ -326,8 +361,8 @@ QPushButton[objectName|="pushButton_top"]:hover{
     border-color: @color3;
 }
 QPushButton[objectName|="pushButton_top"]:pressed{
-	background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
-	padding: 47px -2px 0px 92px;
+    background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
+    padding: 47px -2px 0px 92px;
 }
 QPushButton#pushButton_top_tsi{padding: 45px 0px 0px 92px;}
 QPushButton#pushButton_top_pd{padding: 45px 0px 0px 94px;}
@@ -336,34 +371,34 @@ QPushButton#pushButton_top_iq{padding: 45px 0px 0px 94px;}
 QPushButton#pushButton_top_archive{padding: 45px 0px 0px 60px;}
 
 QFrame[objectName|="frame1_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QFrame[objectName|="frame2_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QFrame[objectName|="frame3_"]{border: 1px solid #17365D;}
 QFrame[objectName|="frame4_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
 }
 QFrame[objectName|="frame6_"]{
-	background-color: rgb(244, 244, 244);    
-	border: 1px solid #17365D;
+    background-color: rgb(244, 244, 244);    
+    border: 1px solid #17365D;
 }
 
 
 QTextEdit[objectName|="textEdit1_"]{border: 1px solid #17365D;}
 QTextEdit[objectName|="textEdit2_"]{
-	border: 1px solid #17365D;
-	font: 10pt "Ubuntu";
+    border: 1px solid #17365D;
+    font: 10pt "Ubuntu";
 }
 
 
@@ -373,15 +408,15 @@ QTableWidget[objectName|="tableWidget1_"]{border: 1px solid #17365D;}
 #treeWidget_attack_attacks > QHeaderView {font-size: 10pt;}
 
 QLabel[objectName|="label1_"]{
-	qproperty-alignment: AlignCenter;
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
-	padding: 0px 0px;
-	color: rgb(255, 255, 255);
-	max-height: 20px;
-	font: bold 10pt "Ubuntu";
+    qproperty-alignment: AlignCenter;
+    border: 1px solid #17365D;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
+    padding: 0px 0px;
+    color: rgb(255, 255, 255);
+    max-height: 20px;
+    font: bold 10pt "Ubuntu";
 }
 QLabel#label4_status1{
     max-height:13px; 
@@ -414,15 +449,15 @@ QPushButton#pushButton_status5{
 }
 
 QStackedWidget[objectName|="stackedWidget1_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-radius: 15px;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
+    border-radius: 15px;
 }
 QStackedWidget[objectName|="stackedWidget2_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QStackedWidget[objectName|="stackedWidget3_"]{border: 1px solid #17365D;}
 
@@ -432,12 +467,12 @@ QStackedWidget[objectName|="stackedWidget3_"]{border: 1px solid #17365D;}
 
 
 QWidget#centralwidget{
-	background-color: rgb(244, 244, 244);
+    background-color: rgb(244, 244, 244);
 }
 
 
 QWidget#scrollAreaWidgetContents_2 {
-	background-color: rgb(244, 244, 244);
+    background-color: rgb(244, 244, 244);
 }
 
 QMenuBar#menubar {
@@ -468,10 +503,10 @@ QComboBox[objectName|="comboBox3_"]{
 
 
 QTableWidget#tableWidget_status_headers{
-	background-color: rgb(244, 244, 244);
+    background-color: rgb(244, 244, 244);
 }
 QTableWidget#tableWidget_status_results{
-	background-color: rgb(244, 244, 244);
+    background-color: rgb(244, 244, 244);
 }
 
 QFrame[objectName|="line1_"]{background: @color3;min-width:1px;max-width: 1px; border:none;}
@@ -501,3 +536,11 @@ QPlainTextEdit#plainTextEdit_commands {
     color:black;
 }
 
+QTreeView#treeWidget_attack_attacks > QHeaderView::section{
+    color: @color5;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
+    font: bold 10pt "Ubuntu";
+    border: none;
+    padding: 3px;
+    padding-left: 4px;
+}
