--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -21244,7 +21244,7 @@ p, li { white-space: pre-wrap; }
               </property>
               <widget class="QWidget" name="tab_8">
                <attribute name="title">
-                <string>File</string>
+                <string>Favorites</string>
                </attribute>
                <widget class="QPushButton" name="pushButton_archive_download">
                 <property name="enabled">
@@ -21431,81 +21431,43 @@ p, li { white-space: pre-wrap; }
                  <string>Download</string>
                 </property>
                </widget>
-               <widget class="QTableWidget" name="tableWidget_archive_download_collection">
+               <widget class="QTreeView" name="treeView_archive_download_collection">
                 <property name="geometry">
                  <rect>
                   <x>0</x>
-                  <y>-1</y>
+                  <y>-2</y>
                   <width>903</width>
                   <height>735</height>
                  </rect>
                 </property>
+                <property name="horizontalScrollBarPolicy">
+                 <enum>Qt::ScrollBarAlwaysOn</enum>
+                </property>
+                <attribute name="headerStretchLastSection">
+                 <bool>false</bool>
+                </attribute>
+               </widget>
+               <widget class="QPushButton" name="pushButton_archive_download_collection_collapse_all">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
+                <property name="geometry">
+                 <rect>
+                  <x>10</x>
+                  <y>745</y>
+                  <width>90</width>
+                  <height>27</height>
+                 </rect>
+                </property>
                 <property name="font">
                  <font>
-                  <pointsize>10</pointsize>
+                  <pointsize>11</pointsize>
                   <strikeout>false</strikeout>
                  </font>
                 </property>
-                <property name="selectionMode">
-                 <enum>QAbstractItemView::SingleSelection</enum>
+                <property name="text">
+                 <string>Collapse All</string>
                 </property>
-                <property name="selectionBehavior">
-                 <enum>QAbstractItemView::SelectRows</enum>
-                </property>
-                <property name="wordWrap">
-                 <bool>false</bool>
-                </property>
-                <attribute name="horizontalHeaderStretchLastSection">
-                 <bool>true</bool>
-                </attribute>
-                <column>
-                 <property name="text">
-                  <string>Size</string>
-                 </property>
-                 <property name="font">
-                  <font>
-                   <pointsize>10</pointsize>
-                   <weight>50</weight>
-                   <bold>false</bold>
-                  </font>
-                 </property>
-                </column>
-                <column>
-                 <property name="text">
-                  <string>Files</string>
-                 </property>
-                 <property name="font">
-                  <font>
-                   <pointsize>10</pointsize>
-                   <weight>50</weight>
-                   <bold>false</bold>
-                  </font>
-                 </property>
-                </column>
-                <column>
-                 <property name="text">
-                  <string>Format</string>
-                 </property>
-                 <property name="font">
-                  <font>
-                   <pointsize>10</pointsize>
-                   <weight>50</weight>
-                   <bold>false</bold>
-                  </font>
-                 </property>
-                </column>
-                <column>
-                 <property name="text">
-                  <string>Notes</string>
-                 </property>
-                 <property name="font">
-                  <font>
-                   <pointsize>10</pointsize>
-                   <weight>50</weight>
-                   <bold>false</bold>
-                  </font>
-                 </property>
-                </column>
                </widget>
               </widget>
              </widget>
@@ -22332,7 +22294,7 @@ p, li { white-space: pre-wrap; }
               <x>5</x>
               <y>25</y>
               <width>300</width>
-              <height>805</height>
+              <height>810</height>
              </rect>
             </property>
             <property name="frameShape">
@@ -22341,25 +22303,6 @@ p, li { white-space: pre-wrap; }
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
             </property>
-            <widget class="QListWidget" name="listWidget_archive_download_files">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>40</y>
-               <width>280</width>
-               <height>725</height>
-              </rect>
-             </property>
-             <property name="font">
-              <font>
-               <pointsize>11</pointsize>
-               <strikeout>false</strikeout>
-              </font>
-             </property>
-             <property name="horizontalScrollBarPolicy">
-              <enum>Qt::ScrollBarAlwaysOn</enum>
-             </property>
-            </widget>
             <widget class="QPushButton" name="pushButton_archive_download_refresh">
              <property name="enabled">
               <bool>true</bool>
@@ -22367,7 +22310,7 @@ p, li { white-space: pre-wrap; }
              <property name="geometry">
               <rect>
                <x>10</x>
-               <y>770</y>
+               <y>745</y>
                <width>90</width>
                <height>27</height>
               </rect>
@@ -22386,7 +22329,7 @@ p, li { white-space: pre-wrap; }
              <property name="geometry">
               <rect>
                <x>200</x>
-               <y>770</y>
+               <y>745</y>
                <width>90</width>
                <height>27</height>
               </rect>
@@ -22417,7 +22360,7 @@ p, li { white-space: pre-wrap; }
               </font>
              </property>
              <property name="text">
-              <string>Folder</string>
+              <string>Choose</string>
              </property>
             </widget>
             <widget class="QComboBox" name="comboBox3_archive_download_folder">
@@ -22443,7 +22386,7 @@ p, li { white-space: pre-wrap; }
              <property name="geometry">
               <rect>
                <x>105</x>
-               <y>770</y>
+               <y>745</y>
                <width>90</width>
                <height>27</height>
               </rect>
@@ -22456,6 +22399,148 @@ p, li { white-space: pre-wrap; }
              </property>
              <property name="text">
               <string>Plot</string>
+             </property>
+            </widget>
+            <widget class="QListView" name="listView_archive">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>70</y>
+               <width>280</width>
+               <height>670</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>11</pointsize>
+               <strikeout>false</strikeout>
+              </font>
+             </property>
+            </widget>
+            <widget class="QComboBox" name="comboBox_archive_extension">
+             <property name="geometry">
+              <rect>
+               <x>95</x>
+               <y>40</y>
+               <width>105</width>
+               <height>27</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>11</pointsize>
+               <strikeout>false</strikeout>
+              </font>
+             </property>
+             <item>
+              <property name="text">
+               <string>All</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>.sigmf-data</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>.iq</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>.cf32</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Custom</string>
+              </property>
+             </item>
+            </widget>
+            <widget class="QTextEdit" name="textEdit_archive_extension">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="geometry">
+              <rect>
+               <x>205</x>
+               <y>40</y>
+               <width>85</width>
+               <height>27</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>11</pointsize>
+               <strikeout>false</strikeout>
+              </font>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="pushButton_archive_new_folder">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>775</y>
+               <width>90</width>
+               <height>27</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>11</pointsize>
+               <strikeout>false</strikeout>
+              </font>
+             </property>
+             <property name="text">
+              <string>New Folder</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="pushButton_archive_folder">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="geometry">
+              <rect>
+               <x>105</x>
+               <y>775</y>
+               <width>90</width>
+               <height>27</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>11</pointsize>
+               <strikeout>false</strikeout>
+              </font>
+             </property>
+             <property name="text">
+              <string>Folder</string>
+             </property>
+            </widget>
+            <widget class="QLabel" name="label2_36">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>45</y>
+               <width>75</width>
+               <height>17</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+               <strikeout>false</strikeout>
+              </font>
+             </property>
+             <property name="text">
+              <string>Extensions:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </widget>
@@ -30625,7 +30710,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>pushButton_iq_morse_code</tabstop>
   <tabstop>pushButton_archive_download_folder</tabstop>
   <tabstop>comboBox3_archive_download_folder</tabstop>
-  <tabstop>listWidget_archive_download_files</tabstop>
   <tabstop>pushButton_archive_download_refresh</tabstop>
   <tabstop>pushButton_archive_download_plot</tabstop>
   <tabstop>pushButton_archive_download_delete</tabstop>
